# auro_report_bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_env.sh
src/: config.rs  csv_generator.rs  date_utils.rs  main.rs  nocodb.rs  pdf_generator.rs  report_service.rs  scheduler.rs
