[package]
name = "auroscope_report_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Telegram Bot
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

# HTTP Client for NocoDB
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV Generation
csv = "1.3"

# PDF Generation
printpdf = "0.7"

# Charts/Plotting
plotters = "0.3"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
